# opencv2_catkin

./: CMakeLists.txt  compile_with_vtk7.patch  fix_warnings.patch  package.xml
cmake/: opencv2-extras.cmake.in
